-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 2.3.0.0-incubating
-
Component/s: Core
-
Labels:None
2017-04-12 14:23:13.866064 BST,"mis_ig","ig",p124811,th-224249568,"10.33.188.8","5172",2017-04-12 14:20:42 BST,76687174,con61,cmd16,seg-1,,,x76687174,sx1,"ERROR","XX000","relcache reference e_event_1_0_102_1_prt_2 is not owned by resource owner TopTransaction (resowner.c:766)",,,,,,"ANALYZE mis_data_ig_account_details.e_event_1_0_102",0,,"resowner.c",766,"Stack trace:
1 0x8ce438 postgres errstart (elog.c:492)
2 0x8d01bb postgres elog_finish (elog.c:1443)
3 0x4ca5f4 postgres relation_close (heapam.c:1267)
4 0x5e7498 postgres analyzeStmt (analyze.c:728)
5 0x5e8a97 postgres analyzeStatement (analyze.c:274)
6 0x65c34c postgres vacuum (vacuum.c:319)
7 0x7f6172 postgres ProcessUtility (utility.c:1472)
8 0x7f1c3e postgres <symbol not found> (pquery.c:1974)
9 0x7f341e postgres <symbol not found> (pquery.c:2078)
10 0x7f5185 postgres PortalRun (pquery.c:1599)
11 0x7ee1f8 postgres PostgresMain (postgres.c:2782)
12 0x7a04f0 postgres <symbol not found> (postmaster.c:5486)
13 0x7a32b9 postgres PostmasterMain (postmaster.c:1459)
14 0x4a52b9 postgres main (main.c:226)
15 0x7fcaee7ded5d libc.so.6 __libc_start_main (??:0)
16 0x4a5339 postgres <symbol not found> (??:0)